# Codex-Gitlab-MCP-Server

./: README.md  pyproject.toml
codex_gitlab_mcp/: __init__.py  cli.py  client.py  server.py
